--- a/BAYESIAN_OPTIMIZATION.ipynb
+++ b/BAYESIAN_OPTIMIZATION.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# $ \\text{Bayesian Optimization for Recommender System}$\n",
     "\n",
-    "### $\text{Bruno Giovanni Galuzzi (University of Milano-Bicocca, 20125 Milan, MI, Italy)}$"
+    "### $\\text{Bruno Giovanni Galuzzi (University of Milano-Bicocca, 20125 Milan, MI, Italy)}$"
    ]
   },
   {
